--- a/facility.html
+++ b/facility.html
@@ -42,7 +42,7 @@
       <div class="rap">
         <div class="smalllogo">
           <a href="index.html"
-            ><img src="assets/svg/ロゴいただき.svg" alt="旅館「嶺」"
+            ><img src="./assets/svg/ロゴいただき.svg" alt="旅館「嶺」"
           /></a>
         </div>
         <nav>
@@ -55,7 +55,7 @@
         </nav>
       </div>
       <div class="facility_visal">
-        <img src="assets/images/施設.jpeg" alt="施設紹介画面" />
+        <img src="./assets/images/施設.jpeg" alt="施設紹介画面" />
       </div>
       <p class="facility">施設</p>
       <audio id="mySong" loop>
