--- a/cuisine.html
+++ b/cuisine.html
@@ -40,7 +40,7 @@
       <div class="hamburger" id="hum"><span></span><span></span><span></span></div>
       <div class="rap">
         <div class="smalllogo">
-          <a href="index.html"><img src="assets/svg/ロゴいただき.svg" alt="旅館「嶺」" /></a>
+          <a href="index.html"><img src="assets/svg/logo.svg" alt="旅館「嶺」" /></a>
         </div>
         <nav>
           <ul>
