--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="rap">
         <div class="smalllogo">
           <a href="index.html"
-            ><img src="assets/svg/ロゴいただき.svg" alt="旅館「嶺」"
+            ><img src="assets/svg/logo.svg" alt="旅館「嶺」"
           /></a>
         </div>
         <nav>
