--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p id="icon">ON</p>
       </div>
       <div class="logo">
-        <img src="assets/svg/ロゴいただき.svg" alt="" />
+        <img src="assets/svg/logo.svg" alt="" />
       </div>
       <div class="opaque"></div>
       <div class="dark" id="kuro"></div>
