--- a/cuisine.html
+++ b/cuisine.html
@@ -64,10 +64,10 @@
         <h2 class="title">朝食</h2>
         <section class="breakfast">
           <div class="breakfast__back">
-            <img src="assets/images/桜島.jpeg" alt="" />
+            <img src="assets/images/sakurazima.jpeg" alt="" />
           </div>
           <div class="breakfast__inner">
-            <img src="assets/images/バイキング1.jpeg" alt="" />
+            <img src="assets/images/viking.jpeg" alt="" />
           </div>
           <div class="breakfast__out">
             <div class="breakfast__out--text">
@@ -79,17 +79,17 @@
               </p>
             </div>
             <div class="breakfast__out--image">
-              <img src="assets/images/バイキング2.jpeg" alt="" />
+              <img src="assets/images/buffet.jpeg" alt="" />
             </div>
           </div>
         </section>
         <h2 class="title">夕食</h2>
         <section class="breakfast">
           <div class="breakfast__back">
-            <img src="assets/images/夕日.png" alt="" />
+            <img src="assets/images/sunset.png" alt="" />
           </div>
           <div class="breakfast__pork ">
-            <img src="assets/images/肉1.jpeg" alt="" />
+            <img src="assets/images/meat.jpeg" alt="" />
           </div>
           <div class="breakfast__out">
             <div class="breakfast__out--text">
@@ -101,16 +101,16 @@
               </p>
             </div>
             <div class="breakfast__out--pork ">
-              <img src="assets/images/肉2.jpeg" alt="" />
+              <img src="assets/images/flesh.jpeg" alt="" />
             </div>
           </div>
         </section>
         <section class="breakfast">
           <div class="breakfast__back">
-            <img src="assets/images/燈.jpg" alt="" />
+            <img src="assets/images/light.jpg" alt="" />
           </div>
           <div class="breakfast__fish">
-            <img src="assets/images/魚2.jpeg" alt="" />
+            <img src="assets/images/rawfishdishes.jpeg" alt="" />
           </div>
           <div class="breakfast__out">
             <div class="breakfast__out--text">
@@ -122,14 +122,14 @@
               </p>
             </div>
             <div class="breakfast__out--fish">
-              <img src="assets/images/魚1.jpeg" alt="" />
+              <img src="assets/images/rawfish.jpeg" alt="" />
             </div>
           </div>
         </section>
         <h2 class="secondtitle">おすすめのお酒</h2>
         <section class="alcohol">
           <div class="alcohol__image">
-            <img src="assets/images/お酒.jpeg" alt="" />
+            <img src="assets/images/alcool.jpeg" alt="" />
           </div>
           <div class="alcohol__text">
             <h3>さくらじま</h3>
