vegasのディレクトリ変更

--- a/cuisine.html
+++ b/cuisine.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="icon" href="assets/svg/ロゴいただき.svg" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="vegas/vegas.min.css" />
+    <link rel="stylesheet" href="./vegas/vegas.min.js" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,8 +16,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/humbuger.js" async></script>
     <script src="js/bgm.js" async></script>
-    <script script type="text/javascript" src="vegas/vegas.min.js"></script>
-    <script script type="text/javascript" src="vegas/cusine.js"></script>
+    <script script type="text/javascript" src="./vegas/vegas.min.css"></script>
+    <script script type="text/javascript" src="./vegas/cusine.js"></script>
     <title>料理紹介</title>
   </head>
   <body>
