--- a/cuisine.html
+++ b/cuisine.html
@@ -6,18 +6,15 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="icon" href="assets/svg/ロゴいただき.svg" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="./vegas/vegas.min.js" />
+    <link rel="stylesheet" href="./vegas/vegas.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap"
       rel="stylesheet"
     />
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/humbuger.js" async></script>
     <script src="js/bgm.js" async></script>
-    <script script type="text/javascript" src="./vegas/vegas.min.css"></script>
-    <script script type="text/javascript" src="./vegas/cusine.js"></script>
     <title>料理紹介</title>
   </head>
   <body>
@@ -30,17 +27,21 @@
       <div class="dark" id="kuro"></div>
       <div class="spannavi" id="sn">
         <ul>
-            <li><a href="index.html">はじめに</a></li>
-            <li><a href="guestroom.html">客室</a></li>
-            <li><a href="cuisine.html">料理</a></li>
-            <li><a href="facility.html">施設</a></li>
+          <li><a href="index.html">はじめに</a></li>
+          <li><a href="guestroom.html">客室</a></li>
+          <li><a href="cuisine.html">料理</a></li>
+          <li><a href="facility.html">施設</a></li>
         </ul>
         <button>予約はこちらから</button>
-    </div>
-      <div class="hamburger" id="hum"><span></span><span></span><span></span></div>
+      </div>
+      <div class="hamburger" id="hum">
+        <span></span><span></span><span></span>
+      </div>
       <div class="rap">
         <div class="smalllogo">
-          <a href="index.html"><img src="assets/svg/logo.svg" alt="旅館「嶺」" /></a>
+          <a href="index.html"
+            ><img src="assets/svg/logo.svg" alt="旅館「嶺」"
+          /></a>
         </div>
         <nav>
           <ul>
@@ -71,7 +72,7 @@
           </div>
           <div class="breakfast__out">
             <div class="breakfast__out--text">
-                <h3>バイキング</h3>
+              <h3>バイキング</h3>
               <p>
                 当館では、新鮮な地元食材を使った
                 和食中心の朝食バイキングをご用意。 焼き魚や味噌汁、漬物などを
@@ -88,7 +89,7 @@
           <div class="breakfast__back">
             <img src="assets/images/sunset.png" alt="" />
           </div>
-          <div class="breakfast__pork ">
+          <div class="breakfast__pork">
             <img src="assets/images/meat.jpeg" alt="" />
           </div>
           <div class="breakfast__out">
@@ -100,7 +101,7 @@
                 お好きなだけお楽しみください。
               </p>
             </div>
-            <div class="breakfast__out--pork ">
+            <div class="breakfast__out--pork">
               <img src="assets/images/flesh.jpeg" alt="" />
             </div>
           </div>
@@ -142,35 +143,38 @@
       </div>
     </main>
     <footer>
-        <div class="breadth">
-          <div class="map">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3398.8307338788136!2d130.5391404757618!3d31.58368927418515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x353e6745b0189d3b%3A0x9f6c9b15d696dd2f!2z6bm_5YWQ5bO25Lit5aSu6aeF!5e0!3m2!1sja!2sjp!4v1735623557357!5m2!1sja!2sjp"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
-          <div class="detailedview">
-                  <p>〒890-0053 鹿児島県鹿児島市中央町１−１</p>
-                  <p>Tel:xxx-xxxx-xxxx</p>
-                  <ul class="detailedview__list">
-                      <li><a href="">お問い合わせ</a></li>
-                      <li><a href="">質問</a></li>
-                      <li><a href="">プライバシーポリシー</a></li>
-                      <li><a href="">パンフレット</a></li>
-                  </ul>
-                  <ul class="detailedview__sns">
-                      <li><img src="assets/svg/facebook-3-2.svg" alt=""></li>
-                      <li><img src="assets/svg/x-2 (1).svg" alt=""></li>
-                      <li><img src="assets/svg/instagram-2016-5 (1).svg" alt=""></li>
-                  </ul>
-          </div>
-          <small>&copy;ITADAKI</small>
+      <div class="breadth">
+        <div class="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3398.8307338788136!2d130.5391404757618!3d31.58368927418515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x353e6745b0189d3b%3A0x9f6c9b15d696dd2f!2z6bm_5YWQ5bO25Lit5aSu6aeF!5e0!3m2!1sja!2sjp!4v1735623557357!5m2!1sja!2sjp"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
-      </footer>
-      <script src="js/humbuger.js" async></script>
-      <script src="js/fadeup.js" async></script>
+        <div class="detailedview">
+          <p>〒890-0053 鹿児島県鹿児島市中央町１−１</p>
+          <p>Tel:xxx-xxxx-xxxx</p>
+          <ul class="detailedview__list">
+            <li><a href="">お問い合わせ</a></li>
+            <li><a href="">質問</a></li>
+            <li><a href="">プライバシーポリシー</a></li>
+            <li><a href="">パンフレット</a></li>
+          </ul>
+          <ul class="detailedview__sns">
+            <li><img src="assets/svg/facebook-3-2.svg" alt="" /></li>
+            <li><img src="assets/svg/x-2 (1).svg" alt="" /></li>
+            <li><img src="assets/svg/instagram-2016-5 (1).svg" alt="" /></li>
+          </ul>
+        </div>
+        <small>&copy;ITADAKI</small>
+      </div>
+    </footer>
+    <script src="js/humbuger.js" async></script>
+    <script src="js/fadeup.js" async></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script type="text/javascript" src="./vegas/cusine.js"></script>
+    <script type="text/javascript" src="./vegas/vegas.min.js"></script>
   </body>
 </html>
