--- a/guestroom.html
+++ b/guestroom.html
@@ -6,20 +6,18 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="icon" href="assets/svg/ロゴいただき.svg" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="vegas/vegas.min.css" />
+    <link rel="stylesheet" href="./vegas/vegas.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap"
       rel="stylesheet"
     />
-    <script src="https://cdn.jsdelivr.net/npm/jquery-inview@1.0.0/jquery.inview.min.js"></script>    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/humbuger.js" async></script>
-    <script script type="text/javascript" src="vegas/vegas.min.js"></script>
+
     <script script type="text/javascript" src="js/fadein.js" async></script>
     <script script type="text/javascript" src="js/bgm.js" async></script>
-    <script script type="text/javascript" src="vegas/guestroom.js"></script>
     <title>客室紹介</title>
   </head>
   <body>
@@ -169,5 +167,8 @@
         <small>&copy;ITADAKI</small>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-inview@1.0.0/jquery.inview.min.js"></script>
+    <script script type="text/javascript" src="./vegas/vegas.min.js"></script>
+    <script script type="text/javascript" src="./vegas/guestroom.js"></script>
   </body>
 </html>
