--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="icon" href="assets/svg/ロゴいただき.svg" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="vegas/vegas.min.css" />
+    <link rel="stylesheet" href="./vegas/vegas.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap"
       rel="stylesheet"
     />
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
     <script src="js/humbuger.js" async></script>
     <script script type="text/javascript" src="vegas/vegas.min.js"></script>
     <script script type="text/javascript" src="vegas/function.js"></script>
@@ -106,9 +106,9 @@
         <small>&copy;ITADAKI</small>
       </div>
     </footer>
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script script type="text/javascript"  src="./vegas/function.js"></script>
+    <script script type="text/javascript"  src="./vegas/vegas.min.js"></script>
     <script src="js/humbuger.js" async></script>
-    <script script type="text/javascript"  src="vegas/vegas.min.js"></script>
-    <script script type="text/javascript"  src="vegas/function.js"></script> -->
   </body>
 </html>
