--- a/guestroom.html
+++ b/guestroom.html
@@ -167,7 +167,7 @@
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script script type="text/javascript" src="./vegas/vegas.min.js"></script>
-    <script script type="text/javascript" src="./vegas/guestroom.js"></script>
+    <script  type="text/javascript" src="./vegas/vegas.min.js"></script>
+    <script  type="text/javascript" src="./vegas/guestroom.js"></script>
   </body>
 </html>
