--- a/guestroom.html
+++ b/guestroom.html
@@ -69,7 +69,7 @@
         <section class="humoto">
           <div class="humoto__inner">
             <div class="humoto__inner--image" id="bax">
-              <img src="assets/images/麓.webp" alt="" />
+              <img src="assets/images/mountain.webp" alt="" />
             </div>
             <div class="humoto__inner--text">
               <img src="assets/svg/麓.svg" alt="" />
@@ -92,7 +92,7 @@
         <section class="humoto">
           <div class="humoto__inner">
             <div class="humoto__inner--photo" id="bex">
-              <img src="assets/images/麓.webp" alt="" />
+              <img src="assets/images/race.webp" alt="" />
             </div>
             <div class="humoto__inner--text">
               <img src="assets/svg/峠.svg" alt="" />
@@ -115,7 +115,7 @@
         <section class="humoto">
           <div class="humoto__inner">
             <div class="humoto__inner--picture" id="box">
-              <img src="assets/images/麓.webp" alt="" />
+              <img src="assets/images/room.webp" alt="" />
             </div>
             <div class="humoto__inner--text">
               <img src="assets/svg/嶺.svg" alt="" />
