svg追加と変更

--- a/guestroom.html
+++ b/guestroom.html
@@ -72,7 +72,7 @@
               <img src="assets/images/mountain.webp" alt="" />
             </div>
             <div class="humoto__inner--text">
-              <img src="assets/svg/麓.svg" alt="" />
+              <img src="assets/svg/humoto.svg" alt="" />
             </div>
           </div>
           <div class="humoto__inner">
@@ -95,7 +95,7 @@
               <img src="assets/images/race.webp" alt="" />
             </div>
             <div class="humoto__inner--text">
-              <img src="assets/svg/峠.svg" alt="" />
+              <img src="assets/svg/touge.svg" alt="" />
             </div>
           </div>
           <div class="humoto__inner">
@@ -118,7 +118,7 @@
               <img src="assets/images/room.webp" alt="" />
             </div>
             <div class="humoto__inner--text">
-              <img src="assets/svg/嶺.svg" alt="" />
+              <img src="assets/svg/itadaki.svg" alt="" />
             </div>
           </div>
           <div class="humoto__inner">
