--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <body>
     <header>
       <div class="right-col">
-        <p>BGM</p>
-        <p id="icon">ON</p>
+        <p>音楽</p>
+        <p id="icon">再生</p>
       </div>
       <div class="logo">
         <img src="assets/svg/logo.svg" alt="" />
