--- a/facility.html
+++ b/facility.html
@@ -21,8 +21,8 @@
   <body>
     <header>
       <div class="right-col">
-        <p>BGM</p>
-        <p id="icon">ON</p>
+        <p>音楽</p>
+        <p id="icon">再生</p>
       </div>
       <script script type="text/javascript" src="js/fadein.js" async></script>
       <div class="opaque"></div>
