--- a/cuisine.html
+++ b/cuisine.html
@@ -20,8 +20,8 @@
   <body>
     <header>
       <div class="right-col">
-        <p>BGM</p>
-        <p id="icon">ON</p>
+        <p>音楽</p>
+        <p id="icon">再生</p>
       </div>
       <div class="opaque"></div>
       <div class="dark" id="kuro"></div>
