新しいjs追加

--- a/cuisine.html
+++ b/cuisine.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <div class="right-col">
+      <div class="right-col" id="music">
         <p>音楽</p>
         <p id="icon">再生</p>
       </div>
@@ -90,7 +90,7 @@
             <img src="assets/images/sunset.png" alt="" />
           </div>
           <div class="breakfast__pork">
-            <img src="assets/images/meat.jpeg" alt="" />
+            <img src="assets/images/flesh.jpeg" alt="" />
           </div>
           <div class="breakfast__out">
             <div class="breakfast__out--text">
@@ -102,7 +102,7 @@
               </p>
             </div>
             <div class="breakfast__out--pork">
-              <img src="assets/images/flesh.jpeg" alt="" />
+              <img src="assets/images/meat.jpeg" alt="" />
             </div>
           </div>
         </section>
@@ -111,7 +111,7 @@
             <img src="assets/images/light.jpg" alt="" />
           </div>
           <div class="breakfast__fish">
-            <img src="assets/images/rawfishdishes.jpeg" alt="" />
+            <img src="assets/images/rawfish.jpeg" alt="" />
           </div>
           <div class="breakfast__out">
             <div class="breakfast__out--text">
@@ -123,7 +123,7 @@
               </p>
             </div>
             <div class="breakfast__out--fish">
-              <img src="assets/images/rawfish.jpeg" alt="" />
+              <img src="assets/images/rawfishdishes.jpeg" alt="" />
             </div>
           </div>
         </section>
