--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <div class="right-col">
+      <div class="right-col" id="music">
         <p>音楽</p>
         <p id="icon">再生</p>
       </div>
