--- a/cuisine.html
+++ b/cuisine.html
@@ -87,7 +87,7 @@
         <h2 class="title">夕食</h2>
         <section class="breakfast">
           <div class="breakfast__back">
-            <img src="assets/images/sunset.png" alt="" />
+            <img src="assets/images/夕日.png" alt="" />
           </div>
           <div class="breakfast__pork">
             <img src="assets/images/flesh.jpeg" alt="" />
